# Trackeroo

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.e2e.yml  docker-compose.yml
.cursor/: environment.json
.github/workflows/: ci.yml  release.yml
backend/: .gitignore  requirements.txt
backend/app/: main.py  schemas.py
backend/app/routers/: project.py  tasks.py
backend/tests/: conftest.py  test_tasks.py
docs/: api-contract.md  openapi.json
e2e/: global-teardown.ts  package.json
e2e/helpers/: dnd.ts  reset.ts
e2e/tests/: board.spec.ts  dependencies.spec.ts  drag.spec.ts  epics.spec.ts  swimlanes.spec.ts
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css
frontend/src/lib/: EpicTag.svelte  TaskDetailPanel.svelte  TaskDetailPanel.test.ts  api.ts  errors.ts  store.svelte.ts  types.ts
mcp/: README.md  server.py
mcp/tests/: docker-compose.test.yml  requirements.txt
v1/: CLAUDE.md  README.md
v1/backend/app/: database.py  export_openapi.py  main.py  (+1 more)
v1/docs/: api-contract.md
v1/e2e/: global-setup.ts  package-lock.json  playwright.config.ts
v1/frontend/: .env.development
v2/: CLAUDE.md  README.md  package-lock.json  package.json
v2/backend/: run_sidecar.py
v2/docs/: api-contract.md  multi-project-plan.md  openapi.json
v2/frontend/: .env.development  .env.example  .env.production  index.html  package-lock.json  package.json  vite.config.ts
v2/mcp/: README.md  backend_spawn.py  server.py
v2/src-tauri/: Cargo.toml  tauri.conf.json
v2/src-tauri/src/: lib.rs  main.rs
(+45 files in other folders)
