[package]
name = "trackeroo"
version = "0.2.0"
description = "Trackeroo desktop app"
authors = ["Trackeroo"]
edition = "2021"

[lib]
name = "trackeroo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
ctrlc = { version = "3", features = ["termination"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
